--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
